# Battery_simulation

./: Works.py  current_edition.py  example.py  fem_wrapper.py  hacky_notworking.py  mesher.py  oop_edition.py  semi-working.py
Battery_Escience/: .bumpversion.cfg  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties
Battery_Escience/battery_sim/: Works.py  example.py  mesher.py
